--- a/ClipboardInspector/MainWindow.xaml
+++ b/ClipboardInspector/MainWindow.xaml
@@ -5,57 +5,60 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ClipboardInspector"
         mc:Ignorable="d"
-        Title="Clipboard Inspector" Height="450" Width="800"
+        Title="Clipboard Inspector" Height="680" Width="1025"
         Activated="Window_Activated">
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="50"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
-        <Grid>
-            <TextBlock x:Name="Stats" ScrollViewer.VerticalScrollBarVisibility="Auto"/>
-        </Grid>
-        <Grid Grid.Row="1">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="5" />
-                <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>
-            <DockPanel>
-
-            </DockPanel>
-            <GridSplitter Grid.Column="1" HorizontalAlignment="Stretch" Width="5" Background="Black" />
-            <DockPanel LastChildFill="True" Grid.Column="2">
-                <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Margin="4">
-                    <ComboBox SelectedItem="Text" Width="150" Margin="2">
-                        <ComboBoxItem Content="Bitmap"/>
-                        <ComboBoxItem Content="XamlPackage"/>
-                        <ComboBoxItem Content="Xaml"/>
-                        <ComboBoxItem Content="WaveAudio"/>
-                        <ComboBoxItem Content="UnicodeText"/>
-                        <ComboBoxItem Content="Tiff"/>
-                        <ComboBoxItem Content="Text"/>
-                        <ComboBoxItem Content="SymbolicLink"/>
-                        <ComboBoxItem Content="StringFormat"/>
-                        <ComboBoxItem Content="Serializable"/>
-                        <ComboBoxItem Content="Rtf"/>
-                        <ComboBoxItem Content="Riff"/>
-                        <ComboBoxItem Content="Palette"/>
-                        <ComboBoxItem Content="OemText"/>
-                        <ComboBoxItem Content="MetafilePicture"/>
-                        <ComboBoxItem Content="Locale"/>
-                        <ComboBoxItem Content="Html"/>
-                        <ComboBoxItem Content="FileDrop"/>
-                        <ComboBoxItem Content="EnhancedMetafile"/>
-                        <ComboBoxItem Content="Dif"/>
-                        <ComboBoxItem Content="Dib"/>
-                        <ComboBoxItem Content="CommaSeparatedValue"/>
-                        <ComboBoxItem Content="PenData"/>
-                    </ComboBox>
-                    <Button Content="Get" MinWidth="80" Margin="5"/>
-                </StackPanel>
-                <TextBox IsReadOnly="True"></TextBox>
-            </DockPanel>
-        </Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="2.5*" />
+            <ColumnDefinition Width="8" />
+            <ColumnDefinition Width="4*" />
+            <ColumnDefinition Width="8" />
+            <ColumnDefinition Width="3.5*" />
+        </Grid.ColumnDefinitions>
+        <DockPanel LastChildFill="True">
+            <Label DockPanel.Dock="Top" Content="Status"/>
+            <ScrollViewer DockPanel.Dock="Bottom">
+                <TextBlock x:Name="Stats"/>
+            </ScrollViewer>
+        </DockPanel>
+        <GridSplitter Grid.Column="1" HorizontalAlignment="Stretch" Width="8" Background="Black" />
+        <DockPanel Grid.Column="2">
+            <Label DockPanel.Dock="Top" Content="Paste Box (Text)"/>
+            <TextBox DockPanel.Dock="Bottom" Margin="2" AcceptsReturn="True" AcceptsTab="True"/>
+        </DockPanel>
+        <GridSplitter Grid.Column="3" HorizontalAlignment="Stretch" Width="8" Background="Black" />
+        <DockPanel LastChildFill="True" Grid.Column="4">
+            <Label DockPanel.Dock="Top" Content="Content Preview"/>
+            <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Margin="4">
+                <ComboBox x:Name="DataTypeSelector" Width="150" Margin="2">
+                    <ComboBoxItem Content="Bitmap"/>
+                    <ComboBoxItem Content="CommaSeparatedValue"/>
+                    <ComboBoxItem Content="Dib"/>
+                    <ComboBoxItem Content="Dif"/>
+                    <ComboBoxItem Content="EnhancedMetafile"/>
+                    <ComboBoxItem Content="FileDrop"/>
+                    <ComboBoxItem Content="Html"/>
+                    <ComboBoxItem Content="Locale"/>
+                    <ComboBoxItem Content="MetafilePicture"/>
+                    <ComboBoxItem Content="OemText"/>
+                    <ComboBoxItem Content="Palette"/>
+                    <ComboBoxItem Content="PenData"/>
+                    <ComboBoxItem Content="Riff"/>
+                    <ComboBoxItem Content="Rtf"/>
+                    <ComboBoxItem Content="Serializable"/>
+                    <ComboBoxItem Content="StringFormat"/>
+                    <ComboBoxItem Content="SymbolicLink"/>
+                    <ComboBoxItem Content="Text" IsSelected="True"/>
+                    <ComboBoxItem Content="Tiff"/>
+                    <ComboBoxItem Content="UnicodeText"/>
+                    <ComboBoxItem Content="WaveAudio"/>
+                    <ComboBoxItem Content="Xaml"/>
+                    <ComboBoxItem Content="XamlPackage"/>
+                </ComboBox>
+                <Button Content="Get" MinWidth="80" Margin="5" Click="GetDataPreviewButton_Click"/>
+                <Button Content="Clear" MinWidth="80" Margin="5" Click="ClearDataPreviewButton_Click"/>
+            </StackPanel>
+            <TextBox x:Name="ContentPreviewTextBox" IsReadOnly="True" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto"></TextBox>
+        </DockPanel>
     </Grid>
 </Window>
